# game-opengl

./: .gitignore
hw2-kinetic_sculpture/: CMakeLists.txt  README.md
hw2-kinetic_sculpture/shaders/: sculpture.fs  sculpture.vs
hw2-kinetic_sculpture/src/: main.cpp  root_directory.h  root_directory.h.in
hw3-simple_3D_game/: CMakeLists.txt  README.md  imgui.ini
hw3-simple_3D_game/assets/models/: Low.fbx
hw3-simple_3D_game/include/: Camera.h  Collision.h  Mesh.h  Model.h  Player.h  Shader.h
hw3-simple_3D_game/shaders/: model.frag  model.vert  skybox.frag
hw3-simple_3D_game/src/: Camera.cpp  Collision.cpp  Mesh.cpp  Model.cpp  Player.cpp  Shader.cpp  main.cpp
hw4-character_animation_control/: CMakeLists.txt  README.md
hw4-character_animation_control/src/: main.cpp
